[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "timeframes-gui"
version = "0.1.0"
description = "Tkinter GUI to convert time <-> frames"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Minsik Yun"}]

[project.scripts]
timeframes-gui = "timeframes_gui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
